Grid width fix on small screens for IE. Not tested for complications

--- a/Styles/_vars.less
+++ b/Styles/_vars.less
@@ -296,14 +296,12 @@
   // Prevent columns from collapsing when empty
   min-height: 1px;
   word-wrap: break-word;
-  // Inner gutter via padding
-  .query-min(@screen--sm; {
-	  padding-left:  (@_gutter / 2);
-	  padding-right: (@_gutter / 2);
-    // Calculate width based on number of columns available
-    float: left;
-    width: percentage(@ratio);
-  });
+  padding-left:  (@_gutter / 2);
+  padding-right: (@_gutter / 2);
+
+  // Calculate width based on number of columns available
+  float: left;
+  width: percentage(@ratio);
 }
 
 // Generate the small column offsets
