--- a/Styles/global/2_base/_grid.less
+++ b/Styles/global/2_base/_grid.less
@@ -58,11 +58,15 @@ ul.row, ol.row {
 }
 
 .col--full {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 }
 
 .col--main {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(14/22); /* Se mixins in _vars.less */
 		.col-offset(1/22);
@@ -78,7 +82,9 @@ ul.row, ol.row {
 }
 
 .col--filter {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(14/22); /* Se mixins in _vars.less */
 		.col-offset(1/22);
@@ -91,7 +97,9 @@ ul.row, ol.row {
 }
 
 .col--related {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */  
+	});
 	.query-min(@screen--md; {
 		.col(7/22); /* Se mixins in _vars.less */
 	});
@@ -105,7 +113,9 @@ ul.row, ol.row {
 }
 
 .col--main-wide {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(21/22); /* Se mixins in _vars.less */
 		.col-offset(1/22);
@@ -121,21 +131,27 @@ ul.row, ol.row {
 }
 
 .col--half {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(1/2); /* Se mixins in _vars.less */
 	});
 }
 
 .col--half-lg {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--lg; {
 		.col(1/2); /* Se mixins in _vars.less */
 	});
 }
 
 .col--third {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(1/2); /* Se mixins in _vars.less */
 	});
@@ -145,7 +161,9 @@ ul.row, ol.row {
 }
 
 .col--quarter {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(1/3); /* Se mixins in _vars.less */
 	});
@@ -156,7 +174,9 @@ ul.row, ol.row {
 }
 
 .col--fifth {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--md; {
 		.col(1/3); /* Se mixins in _vars.less */
 	});
@@ -168,7 +188,9 @@ ul.row, ol.row {
 
 
 .col--six {
-	.col(1); /* Se mixins in _vars.less */
+	.query-min(@screen--sm; {
+		.col(1); /* Se mixins in _vars.less */
+	});
 	.query-min(@screen--lg; {
 		.col(1/6); /* Se mixins in _vars.less */
 	});
